# TD_WL_Ecole_Rodolphe_Cledassou

./: README.md  TD_WL_cycle2_2023.ipynb  pyproject.toml  requirements.txt
tests/: test_td_wl_ecole_rodolphe_cledassou.py
