[tool.poetry]
name = "TD_WL_Ecole_Rodolphe_Cledassou"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
astropy = "^5.3.2"
matplotlib = "^3.7.2"
TreeCorr = "^4.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
